@@ -21,7 +21,7 @@ do
 	if [ $? -eq 0 -a $flag -ne 0 ] ; then
 		break
 	fi
-	echo "$line" | grep "^[0-9]*/.*/.*" > /dev/null # skip dates
+	echo "$line" | grep "^- [0-9]*/.*/.*" > /dev/null # skip dates
 	if [ $? -eq 0 ] ; then
 		continue
 	fi
@@ -34,7 +34,7 @@ do
 		flag=2
 		continue
 	fi
-	echo "$line" |egrep "^- [0-9]|^[0-9]" > /dev/null
+	echo "$line" |egrep "^[0-9]|^[0-9][0-9]|^[0-9][0-9][0-9]" > /dev/null
 	if [ $? -eq 0 ] ; then
 		echo "$line"
 	elif [ -n "$line" ] ; then
