@@ -1,3 +1,3 @@
 libqmail (@version@-@release@) unstable; urgency=medium
 
-  * 
+  * timeoutread, timeoutwrite - fix data types
