@@ -1,5 +1,7 @@
 *
 Release 1.1 Start 14/02/2021
+03/03/2021
+01. timeoutread, timeoutwrite - fix data types
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
